--- a/css/midwayrp.css
+++ b/css/midwayrp.css
@@ -1,7 +1,8 @@
 
+
 @font-face {
 	font-family: "Delight Crush Display - Personal";
-	src: url(./source/Blaize.otf);
+	src: url(../source/font.ttf);
 }
 
 #midwayrp {               
