--- a/css/jobb.css
+++ b/css/jobb.css
@@ -1,12 +1,9 @@
 body {
-  background: url('bilder/6148.jpg') no-repeat;
-  background-size: cover;
-  cursor: url(../source/cursor.cur), auto !important;
-  color: #fff;
-  overflow: hidden;
-  font-family: monospace;
-  text-shadow: 0px 0px 10px #000000
-}
+    background: url('bilder/6148.jpg') no-repeat;
+    background-size: cover;
+    font-family: Arial;
+    color: white;
+  }
 li
 {
     list-style-type: none;
@@ -32,7 +29,7 @@ ul li {
   position: relative;
   margin-right: 0px;
   float: left;
-  width:  168.5px;
+  width:  150px;
   height: 40px;
   background-color: black;
   opacity: .8;
@@ -96,15 +93,6 @@ ul > li:hover > ul
     margin-top: 1px;
     margin-right: 1px;
 }
-
-#navmenu {
-	position: absolute;
- 	left: 50%;
- 	top: 2%;
- 	transform: translate(-50%, -50%);
-	text-align: center;
-}
-
 ul.items li
 {
     /*border-top: 1px solid white;*/
