--- a/css/Police.css
+++ b/css/Police.css
@@ -12,7 +12,7 @@ body {
 	position: absolute;
  	left: 20%;
  	top: 2%;
- 	transform: translate(-9%, -0%);
+ 	transform: translate(-9./%, -0%);
 	text-align: center;
 }
 
