--- a/css/jobb.css
+++ b/css/jobb.css
@@ -1,5 +1,5 @@
 body {
-    background: url('bilder/midwayrp.jpg') no-repeat;
+    background: url('bilder/6148.jpg') no-repeat;
     background-size: cover;
     font-family: Arial;
     color: white;
