--- a/css/midwayroleplay.css
+++ b/css/midwayroleplay.css
@@ -1,5 +1,5 @@
 body {
-  background: url('bilder/6148.jpg') no-repeat;
+  background: url('bilder/Midway role play.png') no-repeat;
   background-size: cover;
   cursor: url(../source/cursor.cur), auto !important;
   color: #fff;
