--- a/css/midwayrp.css
+++ b/css/midwayrp.css
@@ -5,7 +5,7 @@
 	src: url(../source/font.ttf);
 }
 
-#midwayrp {               
+#crushen {               
  	position: absolute;
  	left: 50%;
  	top: 1000%;
