--- a/css/info.css
+++ b/css/info.css
@@ -8,7 +8,13 @@ body {
     text-shadow: 0px 0px 10px #000000
   }
 
-
+  #navmenu {
+	position: absolute;
+ 	left: 15.5%;
+ 	top: 1%;
+ 	transform: translate(-0%, -0%);
+	text-align: center;
+}
 
 
 li
